# youtube-sentiment-analyser

./: .gitignore  README.md  lgbm_model.pkl  requirements.txt  tfidf_vectorizer.pkl
chrome_extension/: README.md  background.js  background.ts  content.js  content.ts  manifest.json  package-lock.json  package.json  popup.html  popup.js  popup.ts  tsconfig.json  welcome.html  welcome.js
experiments/: experiment_1.ipynb  experiment_2.ipynb  label_encoder.pkl  tokenizer.json  tokenizer.pkl
preprocessing_eda/: preprocessing.ipynb
server/: README.md  main.py  pyproject.toml  requirements.txt  tokenizer.py
src/data/: data_ingestion.py  data_preprocessing.py
src/model/: model_building.py  model_evaluation.py  register_model.py
