[project]
name = "youtube-sentiment-server"
version = "0.1.0"
description = "FastAPI server for real-time YouTube live chat sentiment analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.104.0",
    "matplotlib>=3.8.0",
    "mlflow>=2.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.0",
    "selenium>=4.15.0",
    "torch>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]
